RESOLVED FIXED282790
[WebDriver] Assertion failure when starting a second session after the first one exits
https://bugs.webkit.org/show_bug.cgi?id=282790
Summary [WebDriver] Assertion failure when starting a second session after the first ...
Lauro Moura
Reported 2024-11-07 16:31:33 PST
285374@main added a `SessionHost::browserTerminatedObserver`, to clean up the WebDriverBiDi WebSocket when the browser exits/terminates. Steps to reproduce: - Run multiple sequential sessions on the same WPEWebDriver instance in a debug build. ... ASSERTION FAILED: !browserTerminatedObservers().contains(observer) /home/lauro/wkdev-shared/dev/wk-webdriver/WebKit-WebDriver/Source/WebDriver/SessionHost.cpp(121) : void WebDriver::SessionHost::addBrowserTerminatedObserver(const BrowserTerminatedObserver&) 1 0x611e0c85d2aa WebDriver::SessionHost::addBrowserTerminatedObserver(WTF::Observer<void (WTF::String const&)> const&) 2 0x611e0c8710f5 WebDriver::WebDriverService::connectToBrowser(WTF::Vector<WebDriver::Capabilities, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&, WTF::Function<void (WebDriver::CommandResult&&)>&&) 3 0x611e0c870d3d WebDriver::WebDriverService::newSession(WTF::RefPtr<WTF::JSONImpl::Object, WTF::RawPtrTraits<WTF::JSONImpl::Object>, WTF::DefaultRefDerefTraits<WTF::JSONImpl::Object> >&&, WTF::Function<void (WebDriver::CommandResult&&)>&&) 4 0x611e0c86a34f WebDriver::WebDriverService::handleRequest(WebDriver::HTTPRequestHandler::Request&&, WTF::Function<void (WebDriver::HTTPRequestHandler::Response&&)>&&) Likely this was hidden by bug276266, which is preventing normal WebDriver debug runs. Note that to trigger the issue reported in this bug, you have to comment out the assertion in bug276266. Patch incoming.
Attachments
Lauro Moura
Comment 1 2024-11-07 20:21:59 PST
EWS
Comment 2 2024-11-08 18:23:19 PST
Committed 286371@main (1b3d1149f0fe): <https://commits.webkit.org/286371@main> Reviewed commits have been landed. Closing PR #36370 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-08 18:24:14 PST
Note You need to log in before you can comment on or make changes to this bug.